--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "graphql": "^0.13.2",
     "lodash": "^4.17.10",
     "nodemon": "^1.17.5",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "pg-promise": "^8.4.5"
   }
 }
